<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.crazyinfo.fpe_rechner.MainActivity"
    android:clickable="false"
    android:contextClickable="false">

    <TextView
        android:padding="10dp"
        android:text="@string/textViewNote"
        android:id="@+id/textViewNote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/editTextCho"
        android:id="@+id/editTextCho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:layout_below="@+id/textViewNote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/editTextKcal"
        android:id="@+id/editTextKcal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:layout_below="@+id/editTextCho"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/editTextFactor"
        android:id="@+id/editTextFactor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:layout_below="@+id/editTextKcal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/buttonCalc"
        android:id="@+id/buttonCalc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:allowUndo="true"
        android:layout_below="@+id/editTextFactor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@android:style/Widget.Material.Button" />

    <TextView
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:id="@+id/textViewResult"
        android:layout_below="@+id/buttonCalc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
